# gltf-examiner

./: .gitignore  Cargo.toml  index.html  rustfmt.toml
.cargo/: config.toml
assets/: scifi_torso.glb  spider_full.glb  spider_main_skeleton.glb
src/: main.rs
src/bevy_app/: asset_loader_plugin.rs  camera_plugin.rs  mod.rs
src/bevy_app/animated_character/: link_animations.rs  mod.rs
src/bevy_app/modular_character_plugin/: animation_manager_component.rs  assign_skeleton_bones_to_character.rs  assign_skeleton_bones_to_characters.rs  assign_skeleton_bones_to_combatants.rs  attach_newly_spawned_parts.rs  despawn_attached_part.rs  handle_animation_change_requests.rs  handle_part_change_request.rs  link_animations.rs  mark_scenes_as_loaded.rs  mod.rs  notes.txt  paint_cubes_on_joints.rs  print_scene_tree.rs  register_animations.rs  run_animations.rs  spawn_character.rs  spawn_combatant.rs  spawn_combatants_in_battle_locations.rs  spawn_scenes.rs
src/bevy_app/modular_character_plugin/assemble_parts/: attach_part_to_main_skeleton.rs  get_main_skeleton_bones_and_armature.rs  mod.rs
src/bevy_app/modular_character_plugin/attack_sequence/: draw_direction_ray_gizmos.rs  mod.rs  move_entities_toward_destinations.rs  process_active_animation_states.rs  process_combatant_approaching_melee_target.rs  process_combatant_hit_recovery.rs  process_combatant_returning_to_home_position.rs  process_combatant_swinging_weapons.rs  rotate_transform_toward_target.rs  start_combatant_hit_recoveries.rs
src/bevy_app/modular_character_plugin/collect_parts/: mod.rs  send_part_names_to_yew.rs
src/bevy_app/modular_character_plugin/part_change_plugin/: attach_newly_loaded_part_scenes.rs  attach_newly_spawned_parts.rs  delete_bones.rs  despawn_attached_part.rs  despawn_old_parts.rs  despawn_orphan_bones.rs  mark_scenes_as_loaded.rs  mod.rs  spawn_new_parts.rs
src/bevy_app/utils/: link_animations.rs  mark_scenes_as_loaded.rs  mod.rs  paint_cubes_on_scene_children.rs  print_scene_tree.rs
src/comm_channels/: comm_channel_bevy_plugin.rs  mod.rs
src/frontend_common/: animation_names.rs  mod.rs
src/yew_app/: app.rs  battle_combatant_spawner.rs  character_part_selection_menu.rs  character_select_input.rs  character_selection_menu.rs  execute_attack_sequence_button.rs  mod.rs  select_animation_button.rs  select_character_part_button.rs  spawn_character_button.rs
src/yew_app/store/: mod.rs
style/: output.css
