[package]
name = "gltf-examiner"
version = "0.1.0"
edition = "2021"

[dependencies]
bevy = "0.12.0" # dynamic linking can't be used on wasm targets
gloo = "0.10.0"
js-sys = "0.3.64"
yew = { version = "0.21.0", features = ["csr"] }
wasm-bindgen = "0.2.88"
void = "1.0.2"
crossbeam-channel = "0.5.8"
bevy_panorbit_camera = "0.9.2"


